--- a/src/components/footer/index.html
+++ b/src/components/footer/index.html
@@ -1,8 +1,114 @@
-<footer>
-  <div class="container">
-    <span class="title-block title-block_one">Footer</span>
-    <a href="/">Главная</a>
-    <a href="/pages/catalog">Каталог</a>
-    <a href="/pages/toys">Игрушки</a>
+<footer class="footer">
+  <div class="footer-content container">
+    <div class="main-footer-content">
+      <section class="navigation-list">
+        <h2 class="footer title-main"> Navigation</h2>
+        <hr class="short-line"> 
+        <ul class="hidden-marker">
+          <li class="footer-item">
+            <a class="footer-link" href="#"> About Us</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="#"> Blog </a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="#">Design Services </a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="#">Featured On </a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="#">2018 Holiday Catalog </a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="#">Shop By Designer </a>
+          </li>
+        </ul>
+      </section>
+      <section class="information-list">
+        <h2 class="footer title-main">Customer Information</h2>
+        <hr class="short-line"/>
+        <ul class="hidden-marker">
+          <li class="footer-item">
+            <a class="footer-link" href="#">Contact Us</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="#">Sale Exclusions</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="#">Shipping & Returns</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="#">Terms & Conditions</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="#">Privacy Policy</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="#">Search</a>
+          </li>
+        </ul>
+      </section>
+      <section class="connect-list">
+        <h2 class="footer title-main">Connect </h2>
+        <hr class="short-line" />
+        <form class="email-form" method="POST" action="https://form-data-dl.herokuapp.com/api/messages">
+          <p class="connect-form">
+            <label for="input-email"> </label>
+            <input class="input-email-form" name="email" id="input-email" placeholder="Email">
+          </p>
+          <button class="button button-footer" type="submit">
+            Join
+          </button>
+        </form>
+        <ul class="hidden-marker social-list">
+          <li class="social-item">
+            <a class='social-item' href="#">
+              <img class="mail-img" src="/static/images/facebook.svg" alt="facebook" width="30" height="30">
+            </a>
+          </li>
+          <li class="social-item">
+            <a class='social-item' href="#">
+              <img class="mail-img" src="/static/images/twitter.svg" alt="twitter"  width="30" height="30">
+            </a>
+          </li>
+          <li class="social-item">
+            <a class='social-item' href="#">
+              <img class="mail-img" src="/static/images/pinterest.svg" alt="pinterest"  width="30" height="30">
+            </a>
+          </li>
+          <li class="social-item">
+            <a class='social-item' href="#">
+              <img class="mail-img" src="/static/images/instagram.svg" alt="instagram"  width="30" height="30">
+            </a>
+          </li>
+        </ul>
+      </section>
+    </div>
+    <hr class="bottom-line"/>
+    <div class="general-footer-information">
+      <div class="company-rating">
+        <a class="rating" href="#"> Company Rating </a>
+        <button class="star-button">
+          <img class="star-item" src="/static/images/star.svg" alt="star">
+        </button>
+        <button class="star-button">
+          <img class="star-item" src="/static/images/star.svg" alt="star">
+        </button>
+        <button class="star-button">
+          <img class="star-item" src="/static/images/star.svg" alt="star">
+        </button>
+        <button class="star-button">
+          <img class="star-item" src="/static/images/star.svg" alt="star">
+        </button>
+        <button class="star-button">
+          <img class="star-item" src="/static/images/star.svg" alt="star">
+        </button>
+      </div>
+      <div class="footer-copyright">
+        Copyright © 2018 Dlk • Design Life Kids
+      </div>
+      <a class="footer-link design" href="#"> Web Design — Direct Line Development </a>
+    </div>
   </div>
 </footer>
